Text alignment fix

--- a/app/assets/stylesheets/dog_index.css
+++ b/app/assets/stylesheets/dog_index.css
@@ -43,3 +43,7 @@
 .dog-name:hover{
   color: #f93;
 }
+
+.move-right{
+  padding-left: 10px;
+}
